tests/valid_inputs/array_access_var.cpp

int main() {
	int a[5], idx = 2;
	a[idx] = 42;
	return a[idx];
}

