tests/invalid_inputs/sema/array_of_func.cpp

void (arr[5]) (int a, char c);
